--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -7,11 +7,11 @@
     <title>Flask Favorite 5</title>
 </head>
 <body>
-    <h1>My faborite tests are:</h1>
+    <h1>My favorite manga are:</h1>
     <div>
         <ul>
-            {% for t in test %}
-                <li>{{ t }}</li>
+            {% for m in manga %}
+                <li>{{ m }}</li>
             {% endfor %}
         </ul>
     </div>
